# autoimport

./: README.md  pyproject.toml
.github/workflows/: ci.yml  cla.yml  publish.yml
autoimport/: __init__.py  main.py
tests/: README.md  test_autoimport.py  test_imports.py  test_module1.py
